--- a/views/css/login.css
+++ b/views/css/login.css
@@ -9,28 +9,57 @@ a:hover {
   color:  #00bfa5;
   text-decoration: none;
 }
+
 @media (min-width: 0px) {
+  h4 {
+    font-size: 12px;
+  }
+
   #logo {
-    height: 100px;
-    width: 150px;
+    height: 50px;
+    width: 50px;
     margin-bottom: 2%;
     margin-left: 20%;
   }
+  #title {
+    height: 50px;
+    width: 100px;
+    margin-top: 6%;
+    margin-bottom: 3%;
+  }
 }
 @media (min-width: 768px) {
+  h4 {
+    font-size: 18px;
+  }
   #logo {
-    height: 150px;
-    width: 200px;
+    height: 80px;
+    width: 80px;
     margin-bottom: 2%;
+  }
+  #title {
+    height: 50px;
+    width: 150px;
+    margin-top: 5%;
+    margin-bottom: 3%;
   }
 
 }
 @media (min-width: 1280px) {
   #logo {
-    height: 200px;
-    width: 250px;
+    height: 100px;
+    width: 100px;
     margin-bottom: 2%;
     margin-left: 10%;
+  }
+  #title {
+    height: 50px;
+    width: 150px;
+    margin-top: 8%;
+    margin-bottom: 3%;
+  }
+  .voffset {
+    margin-left: 4%;
   }
 }
 
@@ -106,11 +135,14 @@ a:hover {
       background: #fff;
       border-color: #e64522;
 }
-.container {
-  max-width: 30%
-    padding: 15px;
-    margin: 0 auto;
-}
+
 #social {
   display: inline-block;
+}
+.vcenter {
+margin-top: 7%;
+}
+#moto {
+  color: white;
+  margin-left: 5%;
 }
