--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,20 +1,20 @@
 <!doctype html>
 <html>
 <head>
-	<title>Node Authentication</title>
+	<title>local Game</title>
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
 	<link href="/css/login.css" rel="stylesheet" type="text/css">
 
 </head>
 <body>
-	<div class="container">
-	    <div class="col-md-12">
-	      <div class="col-xm-12 col-xm-offset-4 col-sm-12 col-sm-offset-2 col-md-6 col-md-offset-4">
+	<div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-7 vcenter">
+	      <div class="col-xm-12 col-xm-offset-4 col-sm-12 col-sm-offset-1 col-md-6 col-md-offset-4">
 	        <img id="logo" src="/asets/logo.svg">
+					<img id="title" src="/asets/localGame.svg">
 	      </div>
 	  <div class="col-sm-12 col-sm-offset-3 col-md-12 col-md-offset-4" id="social">
-	        <div class="col-xs-4 col-sm-2 col-md-1">
+	        <div class="col-xs-4 col-sm-2 col-md-1 voffset">
 	          <a href="/auth/facebook" class="facebookBtn button"></a>
 	        </div>
 	        <div class="col-xs-4 col-sm-2 col-md-1">
@@ -60,7 +60,6 @@
 	      <p><a href="/signup">Register</a></p>
 	    </div>
 	  </div>
-	  </div>
-	  </div>
+	</div>
 </body>
 </html>
