--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -4,45 +4,61 @@
 	<title>Node Authentication</title>
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-	<style>
-		body 		{ padding-top:80px; }
-	</style>
+	<link href="/css/login.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<div class="container">
-<div class="col-sm-6 col-sm-offset-3">
-
-	<h1><span class="fa fa-sign-in"></span> Signup</h1>
-
-	<% if (message.length > 0) { %>
-		<div class="alert alert-danger"><%= message %></div>
-	<% } %>
-
-	<!-- LOGIN FORM -->
-	<form action="/signup" method="post">
-		<div class="form-group">
-			<label>Email</label>
-			<input type="text" class="form-control" name="email">
-		</div>
-		<div class="form-group">
-			<label>Password</label>
-			<input type="password" class="form-control" name="password">
-		</div>
-
-		<button type="submit" class="btn btn-warning btn-lg">Signup</button>
-	</form>
-
-	<hr>
-
-	<p>Already have an account? <a href="/login">Login</a></p>
-	<p>Or go <a href="/">home</a>.</p>
-
-	<div class="text-center">
-		<p>Angular conversion by <a href="http://brandonmcquarie.com/">Brandon</a> and <a href="http://chrisheninger.com/">Chris</a>. Visit the <a href="https://github.com/brandonmcquarie/easy-node-authentication-angular">Github Repo</a>.</p>
-		<p>Original Node/Express demo by <a href="http://scotch.io">Scotch</a>. Visit the <a href="http://scotch.io/tutorials/javascript/easy-node-authentication-setup-and-local">tutorial</a>.</p>
+<div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-7 vcenter">
+			<div class="col-xm-12 col-xm-offset-4 col-sm-12 col-sm-offset-1 col-md-6 col-md-offset-4">
+				<img id="logo" src="/asets/logo.svg">
+				<img id="title" src="/asets/localGame.svg">
+			</div>
+	<div class="col-sm-12 col-sm-offset-3 col-md-12 col-md-offset-4" id="social">
+				<div class="col-xs-4 col-sm-2 col-md-1 voffset">
+					<a href="/auth/facebook" class="facebookBtn button"></a>
+				</div>
+				<div class="col-xs-4 col-sm-2 col-md-1">
+					<a href="/auth/twitter" class="twitterBtn button"></a>
+				</div>
+				<div class="col-xs-4 col-sm-2 col-md-1">
+					<a href="/auth/google" class="googleplusBtn button"></a>
+				</div>
 	</div>
-	
-</div>
+
+	<div class="col-sm-12 col-md-12">
+		<div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4">
+			<div id="moto">
+				<h4><span class="fa fa-heart"></span> It's free! So go on and sign up.</h4>
+			</div>
+			<hr>
+		</div>
+	</div>
+
+	<div class="col-md-12">
+		<div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4">
+			<% if (message.length > 0) { %>
+					<div class="alert alert-danger"><%= message %></div>
+			<% } %>
+				<form class="omb_loginForm" action="/signup" method="post">
+				<div class="input-group">
+					<span class="input-group-addon"><i class="fa fa-user"></i></span>
+					<input type="text" class="form-control" name="email" placeholder="Email address">
+				</div>
+				<span class="help-block"></span>
+
+				<div class="input-group">
+					<span class="input-group-addon"><i class="fa fa-lock"></i></span>
+					<input  type="password" class="form-control" name="password" placeholder="Password">
+				</div>
+				<br>
+				<button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
+			</form>
+		</div>
+		</div>
+	<div class="col-md-12">
+		<div class="col-xs-12 col-xs-offset-1  col-sm-6 col-sm-offset-3 col-md-3 col-md-offset-5">
+			<p><a href="/login">Already have an account?</a></p>
+		</div>
+	</div>
 </div>
 </body>
 </html>
