--- a/views/css/games.css
+++ b/views/css/games.css
@@ -1,34 +1,89 @@
+
 body {
   background: #F1F2B5; /* fallback for old browsers */
   background: -webkit-linear-gradient(to left, #F1F2B5 , #135058); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to left, #F1F2B5 , #135058); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
-.gamesContainer {
-  margin-top: 10px;
-}
+
 .centerBlock {
   display: table;
   margin: 0 auto;
+  margin-bottom: 10px;
 }
-@media (min-width: 0px) {
-  img {
-    height: 160px;
-    width: 110px;
-  }
-}
-@media (min-width: 768px) {
-  img {
-    height: 220px;
-    width: 150px;
-  }
-}
-@media (min-width: 1280px) {
-  img {
-    height: 220px;
-    width: 150px;
-  }
+html,
+body {
+  height: 96%;
+  margin: 0;
+  min-height: 96%;
+  padding: 0;
 }
 
-.portfolio-item {
-    margin-bottom: 25px;
+main {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -moz-box-orient: vertical;
+  -o-box-orient: vertical;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  min-height: 100%;
+}
+.content {
+  -webkit-box-flex: 1;
+  -moz-box-flex: 1;
+  -o-box-flex: 1;
+  box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  margin: 0px auto;
+  max-width: 1200px;
+}
+footer {
+  /*background: #2980b9;*/
+  color: #fff;
+  text-align: center;
+}
+
+
+.masonary-row.row {
+	-webkit-column-gap: 30px;
+	-moz-column-gap: 30px;
+	column-gap: 30px;
+	padding-left: 15px;
+	padding-right: 15px;
+	word-wrap: break-word;
+}
+.masonary-row [class*="col-"] {
+	 display: inline-block;
+	 width: 100%;
+	 height: 100%;
+	 float: none;
+	 padding: 0px;
+}
+@media (min-width: 0px) {
+	.masonary-row.row {
+		-webkit-column-count: 2;
+		-moz-column-count: 2;
+		column-count: 2;
+	}
+}
+@media (min-width: 480px) {
+	.masonary-row.row {
+		-webkit-column-count: 4;
+		-moz-column-count: 4;
+		column-count: 4;
+	}
+}
+@media (min-width: 768px) {
+	.masonary-row.row {
+		-webkit-column-count: 5;
+		-moz-column-count: 5;
+		column-count: 5;
+	}
 }
