--- a/views/games.ejs
+++ b/views/games.ejs
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
 	<link href="/css/games.css" rel="stylesheet" type="text/css">
 	<link href="/css/profile.css" rel="stylesheet" type="text/css">
+	<link href="/css/heart_animation.css" rel="stylesheet" type="text/css">
 
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.11/angular.js"></script>
@@ -37,7 +38,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
 				<li id="user">
-					<h4><%= user.facebook.name || user.google.name || user.twitter.username %></h4>
+
 				</li>
 				<li>
 					<i id="profile" class="fa fa-user fa-2x" aria-hidden="true"></i>
@@ -49,31 +50,43 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-<div class="container">
-	<div class="col-md-12">
-		<div class="centerBlock">
-			<form class="form-inline" role="form">
-		 		<div class="form-group col-xs-9">
-			 		<input type="text" class="form-control input-md text-center" placeholder="Search game" ng-model="formData.text">
-		 		</div>
-		 		<div class="form-group col-xs-2">
-			 		<button type="submit" class="btn btn-primary" ng-click="searchGame()">Search</button>
-		 		</div>
-	 		</form>
-		</div>
-	</div>
-<div class="gamesContainer">
-	<div class="row" ng-repeat="game in games">
-		<div ng-repeat="i in game">
-				<div class="col-xs-6 col-sm-3 col-md-2 portfolio-item">
-					<a href="#">
-						<img ng-src="http://res.cloudinary.com/igdb/image/upload/t_cover_big_2x/{{i.cover_id}}" onerror="if (this.src != 'error.jpg') this.src = 'http://www.omgchrome.com/wp-content/uploads/2015/06/chrome-trex-dinosaur.jpg'"></img>
-					</a>
-					<b><p> {{i.name}}</b></p>
+<main>
+    <div class="content">
+			<div class="col-md-12 centerBlock">
+				<div class="">
+					<form class="form-inline" role="form">
+						<div class="form-group col-sm-10 col-md-4 col-md-offset-4 col-xs-9">
+							<input type="text" class="form-control input-md" placeholder="Search game" ng-model="formData.text">
+						</div>
+						<div class="form-group col-xs-2">
+							<button type="submit" class="btn btn-primary" ng-click="searchGame()">Search</button>
+						</div>
+					</form>
+				</div>
+			</div>
+			<div class="container">
+				<div class="masonary-row row">
+					<div ng-repeat="game in games">
+						<div ng-repeat="i in game">
+							<div class="col-xs-6 col-sm-6 col-lg-3">
+								<div class="thumbnail ">
+									<img src="http://res.cloudinary.com/igdb/image/upload/t_cover_big_2x/{{i.cover_id}}" onerror="if (this.src != 'error.jpg') this.src = 'http://www.omgchrome.com/wp-content/uploads/2015/06/chrome-trex-dinosaur.jpg'">
+								<div class="caption">
+									<h4>{{i.name}}</h4>
+									<p class="flex-text text-muted"></p>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-</div>
+     </div>
+		 <footer>
+
+		 		<div class="text-center">
+		 			Made with <span class="entypo-heart"> by Me</span>
+		 		</div>
+		 	</footer>
 </body>
 </html>
