--- a/views/games.ejs
+++ b/views/games.ejs
@@ -38,7 +38,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
 				<li id="user">
-
+					<h4><%= user.facebook.name || user.google.name || user.twitter.username %></h4>
 				</li>
 				<li>
 					<i id="profile" class="fa fa-user fa-2x" aria-hidden="true"></i>
