--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,7 +1,8 @@
 <!doctype html>
 <html>
 <head>
-	<title>Node Authentication</title>
+	<title>local Game</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
 	<link href="/css/login.css" rel="stylesheet" type="text/css">
