Added user search and display on a map. Also added personalized uzer profiles

--- a/views/games.ejs
+++ b/views/games.ejs
@@ -7,51 +7,24 @@
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
 	<link href="/css/games.css" rel="stylesheet" type="text/css">
-	<link href="/css/profile.css" rel="stylesheet" type="text/css">
+	<link href="/css/navbar.css" rel="stylesheet" type="text/css">
 	<link href="/css/heart_animation.css" rel="stylesheet" type="text/css">
 
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.11/angular.js"></script>
 	<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+	<script src="//cdn.jsdelivr.net/jdenticon/1.3.2/jdenticon.min.js"></script>
 
 	<script src="js/controller/searchCtrl.js"></script> <!-- load up our controller -->
 	<script src="js/services/searchService.js"></script> <!-- load our game service -->
+	<script src="js/services/jdenticonService.js"></script> <!-- load our game service -->
 	<script src="/js/searchCore.js"></script> <!-- load our main application -->
+	<script src="/js/directive.js"></script>
+
 </head>
 <body ng-controller="searchGamesCtrl">
-	<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#"><img id="logo" src="/asets/logo.svg" class="svg"><img id="title" src="/asets/localGame.svg" class="svg"></a>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li><a href="/profile">Home <span class="sr-only">(current)</span></a></li>
-        <li class="active"><a href="/games">Games</a></li>
-				<li><a href="/map">Map</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-
-				<li>
-					<a id="profile_link" href="/profile"><i id="profile" class="fa fa-user fa-2x" aria-hidden="true"></i></a>
-				</li>
-        <li id="logout">
-					<a href="/logout"><i class="fa fa-sign-out fa-lg" aria-hidden="true"></i></a>
-        </li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-<main>
+	<div navbar></div> <!--navbar directive-->
+	<main>
     <div class="content">
 			<!-- <p>{{gameID}}</p>
 			<p>{{name}}</p>
