--- a/views/css/map.css
+++ b/views/css/map.css
@@ -1,50 +1,7 @@
-.navbar-brand {
-  padding: 3px 3px !important;
-}
-
-.nav > li > a {
-  padding: 15px 10px;
-}
-
-.navbar-inverse .navbar-nav > li > a {
-    color: white;
-}
-
-#profile {
-  color: white;
-  padding: 5px 10px;
-  margin-top: 8px;
-  margin-right: 5px;
-  display: inline-block;
-    -moz-border-radius: 100px;
-    -webkit-border-radius: 100px;
-    border-radius: 100px;
-    -moz-box-shadow: 0px 0px 2px #888;
-    -webkit-box-shadow: 0px 0px 2px #888;
-    box-shadow: 0px 0px 2px #888;
-}
-
-#user {
-  color: white;
-  margin-top: 5px;
-  margin-right: 10px;
-}
-li #logout {
-  margin-top: 15px;
-}
-
-#logo {
-  height: 30px;
-  width: 50px;
-}
-
-#title {
-  height: 40px;
-  width: 100px;
-  margin-right: 5px;
-}
-#profile_link {
-  padding: 0px;
+body {
+  background: #141E30; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #141E30 , #243B55); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #141E30 , #243B55); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 #map {
     height: 845px;
@@ -52,4 +9,7 @@ li #logout {
 }
 .container {
   width: 100% !important;
+}
+p {
+  color: white;
 }
