--- a/views/css/user.css
+++ b/views/css/user.css
@@ -105,3 +105,17 @@ footer {
 		column-count: 5;
 	}
 }
+#profile {
+
+background: #43cea2; /* fallback for old browsers */
+background: -webkit-linear-gradient(to left, #43cea2 , #185a9d); /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to left, #43cea2 , #185a9d); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  -webkit-box-shadow: 3px 4px 5px 0px rgba(0,0,0,0.75);
+-moz-box-shadow: 3px 4px 5px 0px rgba(0,0,0,0.75);
+box-shadow: 3px 4px 5px 0px rgba(0,0,0,0.75);
+}
+
+#info {
+  margin-top: 4px;
+}
