--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>local Game</title>
+	<title>localGame</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
@@ -41,8 +41,13 @@
 			<% } %>
 				<form class="omb_loginForm" action="/signup" method="post">
 				<div class="input-group">
-					<span class="input-group-addon"><i class="fa fa-user"></i></span>
+					<span class="input-group-addon"><i class="fa fa-envelope"></i></span>
 					<input type="text" class="form-control" name="email" placeholder="Email address">
+				</div>
+				<span class="help-block"></span>
+				<div class="input-group">
+					<span class="input-group-addon"><i class="fa fa-users"></i></span>
+					<input type="text" class="form-control" name="username" placeholder="Username">
 				</div>
 				<span class="help-block"></span>
 
@@ -51,7 +56,7 @@
 					<input  type="password" class="form-control" name="password" placeholder="Password">
 				</div>
 				<br>
-				<button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
+				<button class="btn btn-lg btn-primary btn-block" type="submit">Sign Up</button>
 			</form>
 		</div>
 		</div>
