--- a/views/user.ejs
+++ b/views/user.ejs
@@ -1,13 +1,13 @@
 <!doctype html>
 <html ng-app="gameApp">
 <head>
-	<title>My Games</title>
+	<title>User</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-	<link href="/css/profile.css" rel="stylesheet" type="text/css">
 	<link href="/css/navbar.css" rel="stylesheet" type="text/css">
+	<link href="/css/user.css" rel="stylesheet" type="text/css">
 	<link href="/css/heart_animation.css" rel="stylesheet" type="text/css">
 
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
@@ -15,18 +15,25 @@
 	<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 	<script src="//cdn.jsdelivr.net/jdenticon/1.3.2/jdenticon.min.js"></script>
 
-	<script src="js/controller/profileCtrl.js"></script> <!-- load up our controller -->
-	<script src="js/services/profileService.js"></script> <!-- load our game service -->
-	<script src="js/services/jdenticonService.js"></script> <!-- load our game service -->
-	<script src="/js/profileCore.js"></script> <!-- load our main application -->
+	<script src="/js/controller/userCtrl.js"></script> <!-- load up our controller -->
+	<script src="/js/services/userService.js"></script> <!-- load our game service -->
+	<script src="/js/services/jdenticonService.js"></script> <!-- load our game service -->
+	<script src="/js/userCore.js"></script> <!-- load our main application -->
 	<script src="/js/directive.js"></script>
 
 </head>
-<body ng-controller="profileCtrl">
-	<div navbar></div> <!--navbar directive-->
-	<main>
+<body ng-controller="userCtrl">
+	<div navbar></div>
+<main>
+	<div id="profile" class="col col-md-8 col-md-offset-2">
+		<div class="col-md-1">
+			<canvas id="userIdenticon" width="80" height="80" />
+		</div>
+		<div id="info" class="col-md-2">
+			<p><b>Username:</b> {{user}}</p>
+		</div>
+	</div>
     <div class="content">
-			<p>{{data}}</p>
 			<div class="col-md-12 centerBlock">
 				<div class="">
 					<form class="form-inline" role="form">
