Cosmetic changes in user profiles (when viewed from other accounts)

--- a/views/css/user.css
+++ b/views/css/user.css
@@ -44,6 +44,7 @@ main {
   margin: 0px auto;
   max-width: 1200px;
 }
+
 footer {
   /*background: #2980b9;*/
   color: #fff;
@@ -106,7 +107,7 @@ footer {
 	}
 }
 #profile {
-
+display: block;
 background: #43cea2; /* fallback for old browsers */
 background: -webkit-linear-gradient(to left, #43cea2 , #185a9d); /* Chrome 10-25, Safari 5.1-6 */
 background: linear-gradient(to left, #43cea2 , #185a9d); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
@@ -116,6 +117,14 @@ background: linear-gradient(to left, #43cea2 , #185a9d); /* W3C, IE 10+/ Edge, F
 box-shadow: 3px 4px 5px 0px rgba(0,0,0,0.75);
 }
 
-#info {
+#username {
   margin-top: 4px;
+}
+
+#request {
+  margin-top: 25px;
+}
+#container {
+  display: inline-block;
+  margin-top: 10px;
 }
