--- a/views/games.ejs
+++ b/views/games.ejs
@@ -59,12 +59,7 @@
 				</div>
 			</div>
 		</div>
-     </div>
-		 <footer>
-
-		 		<div class="text-center">
-		 			Made with <span class="entypo-heart"> by Me</span>
-		 		</div>
-		 	</footer>
+  </div>
+	<div footer></div>
 </body>
 </html>
