--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -56,10 +56,6 @@
 			</div>
 		</div>
      </div>
-		 <footer>
-		 		<div class="text-center">
-		 			Made with <span class="entypo-heart"> by Me</span>
-		 		</div>
-		 	</footer>
+		<div footer></div>
 </body>
 </html>
