Improved routing and templating in user profile section

--- a/views/templates/navbar.html
+++ b/views/templates/navbar.html
@@ -14,7 +14,7 @@
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav">
-      <li ng-class="hometab"><a href="/profile">Home <span class="sr-only">(current)</span></a></li>
+      <li ng-class="hometab"><a href="/profile#/mygames">Home <span class="sr-only">(current)</span></a></li>
       <li ng-class="gametab"><a href="/games">Games</a></li>
       <li ng-class="maptab"><a href="/map">Map</a></li>
     </ul>
