--- a/views/css/profile.css
+++ b/views/css/profile.css
@@ -4,6 +4,9 @@ body {
   background: -webkit-linear-gradient(to left, #F1F2B5 , #135058); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to left, #F1F2B5 , #135058); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
+a {
+  color: black;
+}
 
 .centerBlock {
   display: table;
@@ -75,6 +78,7 @@ footer {
 	column-gap: 30px;
 	padding-left: 15px;
 	padding-right: 15px;
+  padding-top: 10px;
 	word-wrap: break-word;
 }
 .masonary-row [class*="col-"] {
@@ -104,4 +108,26 @@ footer {
 		-moz-column-count: 5;
 		column-count: 5;
 	}
+}
+
+#profile {
+display: block;
+background: #43cea2; /* fallback for old browsers */
+background: -webkit-linear-gradient(to left, #43cea2 , #185a9d); /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to left, #43cea2 , #185a9d); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  -webkit-box-shadow: 3px 4px 5px 0px rgba(0,0,0,0.75);
+-moz-box-shadow: 3px 4px 5px 0px rgba(0,0,0,0.75);
+box-shadow: 3px 4px 5px 0px rgba(0,0,0,0.75);
+}
+
+#username {
+  margin-top: 4px;
+}
+#container {
+  display: inline-block;
+  margin-top: 10px;
+}
+.tab_content {
+  width: 100%;
 }
