--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -12,6 +12,7 @@
 
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.11/angular.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular-route.js"></script>
 	<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 	<script src="//cdn.jsdelivr.net/jdenticon/1.3.2/jdenticon.min.js"></script>
 
@@ -20,42 +21,32 @@
 	<script src="js/services/jdenticonService.js"></script> <!-- load our game service -->
 	<script src="/js/profileCore.js"></script> <!-- load our main application -->
 	<script src="/js/directive.js"></script>
+	<script src="/js/controller/headerCtrl.js"></script>
 
 </head>
 <body ng-controller="profileCtrl">
 	<div navbar></div> <!--navbar directive-->
 	<main>
-    <div class="content">
-			<p>{{data}}</p>
-			<div class="col-md-12 centerBlock">
-				<div class="">
-					<form class="form-inline" role="form">
-						<div class="form-group col-sm-10 col-md-4 col-md-offset-4 col-xs-9">
-
-						</div>
-					</form>
+		<div class="content">
+			<div id="profile" class="col col-md-11">
+				<div class="col-md-1">
+					<canvas id="userIdenticon" width="80" height="80" />
+				</div>
+				<div id="username" class="col col-md-3">
+					<b><h2>{{username}}</h2><b>
 				</div>
 			</div>
-			<div class="container">
-				<div class="masonary-row row">
-						<div ng-repeat="i in games">
-							<div class="col-xs-6 col-sm-6 col-lg-3">
-								<div class="thumbnail ">
-									<div class="circle" ng-click="removeGame(i); disable = !disable">
-										<i ng-class="disable ? 'fa fa-plus' : 'fa fa-check'"></i>
-									</div>
-									<img src="http://res.cloudinary.com/igdb/image/upload/t_cover_big_2x/{{i.cover}}" onerror="if (this.src != 'error.jpg') this.src = 'http://www.omgchrome.com/wp-content/uploads/2015/06/chrome-trex-dinosaur.jpg'">
-								<div class="caption">
-									<h4>{{i.name}}</h4>
-									<p class="flex-text text-muted"></p>
-								</div>
-							</div>
+			<div id="container">
+				<div tabs></div>
+				<!-- <ul class="nav nav-pills pull-right">
+			 <li ng-class="{ active: isActive('/join')}"><a href="#/join">Join the Team</a></li>
+			<li ng-class="{ active: isActive('/find')}"><a href="#/find">Find Teammates</a></li>
+	</ul> -->
 
-					</div>
-				</div>
-			</div>
+
+
 		</div>
-     </div>
-		<div footer></div>
+	</div>
+	<div footer></div>
 </body>
 </html>
