--- a/views/css/user.css
+++ b/views/css/user.css
@@ -1,4 +1,3 @@
-
 body {
   background: #F1F2B5; /* fallback for old browsers */
   background: -webkit-linear-gradient(to left, #F1F2B5 , #135058); /* Chrome 10-25, Safari 5.1-6 */
@@ -50,26 +49,17 @@ footer {
   color: #fff;
   text-align: center;
 }
-.fa-check {
-  color:  #03a9f4;
-}
-.circle{
-  cursor: pointer;
-  height: 40px;
-  width: 40px;
+
+.trade{
   position: absolute;
   right: 0;
-  z-index: 1;
-  padding: 11px 14px;
-  background: #ffee4d;
   display: inline-block;
-  -moz-border-radius: 100px;
-  -webkit-border-radius: 100px;
-  border-radius: 100px;
+  margin-right: 5px;
   -moz-box-shadow: 0px 0px 2px #888;
   -webkit-box-shadow: 0px 0px 2px #888;
   box-shadow: 0px 0px 2px #888;
 }
+
 .masonary-row.row {
 	-webkit-column-gap: 30px;
 	-moz-column-gap: 30px;
