--- a/views/js/partials/mygames.html
+++ b/views/js/partials/mygames.html
@@ -17,3 +17,6 @@
   </div>
 </div>
 </div>
+<div class="alert alert-info" class="col col-md-12 col-xs-12" ng-show="games_error">
+  <strong>Oh snap!</strong> No games found. Go and add some! <i class="fa fa-gamepad"></i>
+</div>
