--- a/views/templates/navbar.html
+++ b/views/templates/navbar.html
@@ -22,7 +22,7 @@
 
       <li>
         <!-- <a id="profile_link" href="/profile"><i id="profile" class="fa fa-user fa-2x" aria-hidden="true"></i></a> -->
-        <a id="profile_link" href="/profile"><canvas id="identicon" width="40" height="40" /></a>
+        <a id="profile_link" href="/profile#/mygames"><canvas id="identicon" width="40" height="40" /></a>
 
       </li>
       <li id="logout">
