--- a/views/css/games.css
+++ b/views/css/games.css
@@ -1,17 +1,10 @@
 
 body {
-
-
-background: #43cea2; /* fallback for old browsers */
-background: -webkit-linear-gradient(to left, #43cea2 , #185a9d); /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to left, #43cea2 , #185a9d); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-        
+  background-image: url("../asets/profile_background2.jpg");
+  background-size: cover;
+  background-repeat: repeat-x;
+  background-attachment: fixed;
 }
-
-[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
-  display: none !important;
-}
-
 
 .centerBlock {
   display: table;
@@ -51,7 +44,17 @@ main {
   flex: 1;
   margin: 0px auto;
   max-width: 1200px;
+  background-color: white;
+  -webkit-box-shadow: 4px 4px 5px 0px rgba(0,0,0,0.75);
+-moz-box-shadow: 4px 4px 5px 0px rgba(0,0,0,0.75);
+box-shadow: 4px 4px 5px 0px rgba(0,0,0,0.75);
 }
+.thumbnail {
+  -webkit-box-shadow: 3px 4px 5px 0px rgba(0,0,0,0.75);
+-moz-box-shadow: 3px 4px 5px 0px rgba(0,0,0,0.75);
+box-shadow: 3px 4px 5px 0px rgba(0,0,0,0.75);
+}
+
 footer {
   /*background: #2980b9;*/
   color: #fff;
@@ -80,7 +83,7 @@ footer {
 .masonary-row.row {
 	-webkit-column-gap: 30px;
 	-moz-column-gap: 30px;
-	column-gap: 30px;
+	column-gap: 25px;
 	padding-left: 15px;
 	padding-right: 15px;
 	word-wrap: break-word;
@@ -101,15 +104,40 @@ footer {
 }
 @media (min-width: 480px) {
 	.masonary-row.row {
+		-webkit-column-count: 3;
+		-moz-column-count: 3;
+		column-count: 3;
+	}
+}
+@media (min-width: 768px) {
+	.masonary-row.row {
 		-webkit-column-count: 4;
 		-moz-column-count: 4;
 		column-count: 4;
 	}
 }
-@media (min-width: 768px) {
+@media (min-width: 1024px) {
 	.masonary-row.row {
 		-webkit-column-count: 5;
 		-moz-column-count: 5;
 		column-count: 5;
 	}
+}
+.col {
+  padding-left: 0px !important;
+  padding-right: 0px !important;
+}
+.form-inline .form-group {
+  margin-bottom: 10px;
+}
+.container {
+  display: table;
+  margin: 0 auto;
+}
+#search_bar {
+  background-color: black;
+}
+
+#search {
+  margin: 10px;
 }
