--- a/views/js/partials/gameRequests.html
+++ b/views/js/partials/gameRequests.html
@@ -7,7 +7,7 @@
           <div class="caption">
             <h3>{{i.game}}</h3>
             <span>Requested by:</span><h5><a href="/user/?id={{i.user}}">{{i.username}}</a></h5>
-            <div class="col-md-12">
+            <div id="action_buttons" class="col-md-12">
               <div id="action" class="col-md-5">
                 <button class="btn btn-success" ng-click="acceptGameRequest(i)">Accept</button>
               </div>
