--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>local Game</title>
+	<meta charset="UTF-8">
 	<link rel="icon" type="image/svg+xml" href="/asets/logo.svg">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
