--- a/views/css/login.css
+++ b/views/css/login.css
@@ -1,6 +1,6 @@
 
 html, body{
-  /*height:100%;*/
+  height:100%;
   background-image: url("../asets/profile_background2.jpg");
   background-size: cover;
   background-repeat: repeat-x;
