Added username display on navigation bar and fixed some http resource links to use https connection

--- a/views/js/partials/mygames.html
+++ b/views/js/partials/mygames.html
@@ -7,7 +7,7 @@
               <i class="fa fa-check"></i>
               <i class="fa fa-times"></i>
             </div>
-            <img src="http://res.cloudinary.com/igdb/image/upload/t_cover_big_2x/{{i.cover}}" onerror="if (this.src != 'error.jpg') this.src = 'http://www.omgchrome.com/wp-content/uploads/2015/06/chrome-trex-dinosaur.jpg'">
+            <img src="https://res.cloudinary.com/igdb/image/upload/t_cover_big_2x/{{i.cover}}" onerror="if (this.src != 'error.jpg') this.src = 'http://www.omgchrome.com/wp-content/uploads/2015/06/chrome-trex-dinosaur.jpg'">
           <div class="caption">
             <h4>{{i.name}}</h4>
             <p class="flex-text text-muted"></p>
