--- a/views/templates/navbar.ejs
+++ b/views/templates/navbar.ejs
@@ -19,7 +19,9 @@
       <li ng-class="maptab"><a href="/map">Map</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-
+      <li>
+        <h4 id="username">{{username}}</h4>
+      </li>
       <li>
         <!-- <a id="profile_link" href="/profile"><i id="profile" class="fa fa-user fa-2x" aria-hidden="true"></i></a> -->
         <a id="profile_link" href="/profile#/mygames"><canvas id="identicon" width="40" height="40" /></a>
