--- a/views/user.ejs
+++ b/views/user.ejs
@@ -49,7 +49,7 @@
 									<button ng-class="change? 'btn btn-success trade' : 'btn btn-primary trade'" ng-click="sendGameRequest(i); change = !change; send_button = true" ng-disabled="send_button">
 										<span ng-hide="change"><i class="fa fa-star" aria-hidden="true"></i> Trade</span>
 										<span ng-show="change"><i class="fa fa-check" aria-hidden="true"></i> Sent</span></button>
-									<img src="http://res.cloudinary.com/igdb/image/upload/t_cover_big_2x/{{i.cover}}" onerror="if (this.src != 'error.jpg') this.src = 'http://www.omgchrome.com/wp-content/uploads/2015/06/chrome-trex-dinosaur.jpg'">
+									<img src="https://res.cloudinary.com/igdb/image/upload/t_cover_big_2x/{{i.cover}}" onerror="if (this.src != 'error.jpg') this.src = 'http://www.omgchrome.com/wp-content/uploads/2015/06/chrome-trex-dinosaur.jpg'">
 								<div class="caption">
 									<h4>{{i.name}}</h4>
 									<p class="flex-text text-muted"></p>
